--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openvdb (11.0.0-0deepin2) unstable; urgency=medium
+
+  * Disable INTERPROCEDURAL_OPTIMIZATION 
+
+ -- xiangzelong <xiangzelong@deepin.org>  Tue, 24 Sep 2024 13:34:47 +0800
+
 openvdb (11.0.0-0deepin1) unstable; urgency=medium
 
   * Revert t64.
